# voice-eval-sketch

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_golden.py  test_judge_exclusion.py  test_no_company_names.py  test_scorer.py  vendor_blocklist.example.txt
voice_eval/: __init__.py  __main__.py  extractor.py  golden.py  judge.py  scorer.py  transcripts.py
